MODE-1323 added D3 charts for the aggregated reports
-renamed some API classes so they have shorter name
-renamed module 2.x to 2.7
-renamed module 3.x to 3.0